@@ -1,332 +1,0 @@
-PHPUnit 3.3.15 by Sebastian Bergmann.
-
-Test Suite
- CoreTests
- ....
-
- ClearCompiledTests
- ..........
-
- ClearCacheTests
- .....
-
- StringResourceTests
- ..................
-
- FileResourceTests
- .........................................
-
- DoubleQuotedStringTests
- ..................
-
- CompileAssignTests
- ......................
-
- AttributeTests
- ....
-
- AppendByRefTests
- .....
-
- AppendTests
- ......
-
- ArrayTests
- ...............
-
- AssignByRefTests
- ..
-
- AssignGlobalTests
- ....
-
- AssignTests
- ..
-
- AutoEscapeTests
- .
-
- CacheResourceCustomMysqlTests
- .................
-
- CacheResourceCustomRegisteredTests
- .................
-
- CacheResourceFileTests
- ....................
-
- ClearAllAssignTests
- .....
-
- ClearAssignTests
- .....
-
- CommentsTests
- .........
-
- CompileAppendTests
- ..
-
- CompileBlockExtendsTests
- .............................
-
- CompileBlockPluginTests
- .........
-
- CompileCaptureTests
- ..........
-
- CompileCompilerPluginTests
- ..
-
- CompileDebugTests
- ..
-
- CompileDelimiterTests
- ..
-
- CompileErrorTests
- .....
-
- CompileEvalTests
- ...
-
- CompileForeachTests
- .............................
-
- CompileForTests
- ....................
-
- CompileFunctionPluginTests
- ...
-
- CompileFunctionTests
- ...........
-
- CompileIfTests
- ........................................................... 59 / 67
- ........
-
- CompileIncludePHPTests
- ...
-
- CompileIncludeTests
- ..........
-
- CompileInsertTests
- .............
-
- CompileNocacheTests
- ...
-
- CompilePhpTests
- ................
-
- CompileRegisteredObjectFunctionTests
- .....
-
- CompilerPluginTests
- .
-
- CompileSectionTests
- ......
-
- CompileSetfilterTests
- .
-
- CompileStripTests
- .
-
- CompileWhileTests
- ..
-
- ConfigVarTests
- .....................................
-
- ConstantsTests
- .
-
- DefaultConfigHandlerTests
- ......
-
- DefaultPluginHandlerTests
- ....
-
- DefaultTemplateHandlerTests
- ....
-
- DelimiterTests
- ....
-
- EvalResourceTests
- ...................
-
- ExtendsResourceTests
- ..........
-
- FilterTests
- ...........
-
- FunctionTests
- .
-
- GetTemplateVarsTests
- ......
-
- GetterSetterTests
- ....
-
- HttpModifiedSinceTests
- ...
-
- IndexedFileResourceTests
- .............
-
- LoadFilterTests
- .
-
- ModifierTests
- ................
-
- ObjectVariableTests
- ...
-
- OutputFilterTrimWhitespaceTests
- .
-
- PhpResourceTests
- ........................
-
- PluginBlockTextformatTests
- ..............
-
- PluginChainedLoadTests
- .
-
- PluginFunctionHtmlSelectDateTests
- .......................
-
- PluginFunctionHtmlSelectTimeTests
- ...............
-
- PluginFunctionMailtoTests
- ..................
-
- PluginModifierCapitalizeTests
- ..............
-
- PluginModifierCharsetTests
- ........
-
- PluginModifierCountCharactersTests
- ........
-
- PluginModifierCountSentencesTests
- ...
-
- PluginModifierCountWordsTests
- ......
-
- PluginModifierEscapeTests
- ........................
-
- PluginModifierLowerTests
- ....
-
- PluginModifierRegexReplaceTests
- ...
-
- PluginModifierSpacifyTests
- ..
-
- PluginModifierStripTests
- .F.
-
- PluginModifierTruncateTests
- ..............
-
- PluginModifierUnescapeTests
- ....
-
- PluginModifierUpperTests
- ....
-
- PluginModifierWordwrapTests
- .................
-
- PrintNocacheTests
- ....
-
- RegisterBlockTests
- ...................
-
- RegisterCompilerFunctionTests
- ......
-
- RegisteredResourceTests
- ...
-
- RegisterFilterTests
- .............
-
- RegisterFunctionTests
- ...........
-
- RegisterModifierTests
- ......
-
- ResourcePluginTests
- .............
-
- SecurityTests
- ...........................
-
- SharedFunctionsTests
- .
-
- SingleQuotedStringTests
- ......
-
- SmartyBcTests
- .
-
- SpacingTests
- ............
-
- StaticClassAccessTests
- ..........
-
- StreamResourceTests
- ....................
-
- StreamVariableTests
- .
-
- TemplateExistsTests
- ..
-
- TernaryTests
- .....................
-
- VariableScopeTests
- ................
-
- VariableVariableTests
- ....
-
- XmlTests
- ......
-
-Time: 02:31
-
-There was 1 failure:
-
-1) testUnicodeSpaces(PluginModifierStripTests)
-Failed asserting that two strings are equal.
-expected string < hello spaced words >
-difference      <xxxxxxxxxxxxxxxxxxxx????????????????>
-got string      < hello spaced       words >
-C:\wamp\www\smarty3.1.0\development\PHPunit\PluginModifierStripTests.php:36
-
-FAILURES!
-Tests: 1040, Assertions: 1556, Failures: 1.
